--- a/index.html
+++ b/index.html
@@ -3,14 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=0" />
+    <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=1.0 maximum-scale=1.0, user-scalable=0"
+    />
     <title>Massage Wall</title>
   </head>
 
   <body>
-    <div id="app">
-
-    </div>
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
+
+  <style>
+    :root {
+      --van-font-size-lg: 18px;
+      --van-font-size-md: 16px;
+    }
+    body {
+      min-height: 100%;
+    }
+  </style>
 </html>
